--- a/Examples/Import/import.html
+++ b/Examples/Import/import.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Queries</title>
+    <title>Import example</title>
 
     <!-- AlaSQL -->
     <script src="//cdn.jsdelivr.net/alasql/0.2/alasql.min.js"></script>
@@ -21,12 +21,13 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<table id="sampleTable">
-</table>
-<table id="cities">
-</table>
-<script src="js/queries.js"></script>
+<div class="container">
+    <h1>Knihovna AlaSQL</h1>
+    <h2>Import dat</h2>
 
+    <h3>JSON</h3>
 
+    <h3>CSV</h3>
+</div>
 </body>
 </html>
