--- a/Examples/Queries/queries.html
+++ b/Examples/Queries/queries.html
@@ -28,10 +28,12 @@
 
 
 <!--  -->
+<h3>Sample table</h3>
 <table id="sampleTable">
 </table>
 
 <!--  -->
+<h3>Table cities</h3>
 <table id="cities">
 </table>
 </body>
