--- a/Examples/Queries/rohlik.html
+++ b/Examples/Queries/rohlik.html
@@ -35,6 +35,9 @@
 <h2>Info</h2>
 
 <h2>Otázky</h2>
-<h3></h3>
+<p>Jaké je nejbližší okno s volnou kapacitou?</p>
+<p>Kolik volných časových intervalů je k dispozici?</p>
+<p>Jaké je nejbližší nejlevnější okno s volnou kapacitou?</p>
+<p>Jak se změnila kapacita mezi dvěmi pozorováními?</p>
 </body>
 </html>
